--- a/lib/mailer.mustache
+++ b/lib/mailer.mustache
@@ -1,6 +1,6 @@
 {{#rows}}
 <b>{{type}}</b><br />
-<a href="{{url}}">AT</a>  {{date}}  {{#geo}}<a href="http://keskkonnateated.ee/{{year}}/{{week}}/{{id}}">Keskkonnateated.ee kaart</a>  <a href="http://maps.google.com/maps?q={{geo.lat}},{{geo.lng}}">Google kaart</a>{{/geo}}
+<a href="{{url}}">AT</a>  {{date}}  {{#geo}}<a href="http://keskkonnateated.ee/#{{year}}/{{week}}/{{id}}">Keskkonnateated.ee kaart</a>  <a href="http://maps.google.com/maps?q={{geo.lat}},{{geo.lng}}">Google kaart</a>{{/geo}}
 <br />
 <br />
 {{{description}}}<br />
