--- a/lib/mailer.mustache
+++ b/lib/mailer.mustache
@@ -1,6 +1,6 @@
 {{#rows}}
 <b>{{type}}</b><br />
-<a href="{{url}}">AT</a>  {{date}}  {{#geo}}<a href="http://keskkonnateated.ee/#{{year}}/{{week}}/{{id}}">Keskkonnateated.ee kaart</a>  <a href="http://maps.google.com/maps?q={{geo.lat}},{{geo.lng}}">Google kaart</a>{{/geo}}
+<a href="{{at_url}}">AT</a>  {{date}}  {{#geo}}<a href="{{base_url}}/#{{year}}/{{week}}/{{id}}">Keskkonnateadete kaart</a>  <a href="http://maps.google.com/maps?q={{geo.lat}},{{geo.lng}}">Google kaart</a>{{/geo}}
 <br />
 <br />
 {{{description}}}<br />
@@ -11,5 +11,5 @@
 ---<br />
 <br />
 Keskkonnateated<br />
-http://keskkonnateated.ee<br />
-keskkonnateated@gmail.com
+{{base_url}}<br />
+{{email}}
